fix(comments): spacing

--- a/src/styles/components/comments/_comment.scss
+++ b/src/styles/components/comments/_comment.scss
@@ -134,7 +134,7 @@ $spacing: 121;
     display: flex;
     flex-direction: column;
     width: fit-content;
-    min-width: 300px;
+    min-width: 250px;
 
     @include butler-mx.dark-mode-class {
       --color-background-comment-content: #{butler-fn.hex-to-rgb(
@@ -242,6 +242,10 @@ $spacing: 121;
     }
   }
 
+  &.is-create-comment {
+    margin-bottom: 100px;
+  }
+
   &.is-author {
     .c-comment__header {
       --color-background-author-image: #{butler-fn.hex-to-rgb(
@@ -263,12 +267,6 @@ $spacing: 121;
     justify-content: center;
     padding: 0;
     font-size: var(--font-size-xs);
-  }
-
-  &__list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 4rem;
   }
 }
 
