--- a/src/styles/components/comments/_comments.scss
+++ b/src/styles/components/comments/_comments.scss
@@ -2,10 +2,6 @@
 
 .c-comments {
   grid-area: comments;
-  display: flex;
-  flex-direction: column;
-  gap: 100px;
-  overflow: hidden;
 
   &__load-more-button {
     display: flex;
@@ -19,5 +15,11 @@
     &.is-loading {
       animation: rotate-center 0.6s ease-in-out infinite both;
     }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 4rem;
   }
 }
